[tool.poetry]
name = "repl_python3_Aula3"
version = "0.1.0"
description = ""
authors = ["RamonRodrigo <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.5"
ipython = "^7.24.1"
seaborn = "^0.11.1"
sklearn = "^0.0"
matplotlib = "^3.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
